syntax = "proto3"; // Use the latest proto syntax

option java_multiple_files = true;
option java_package = "via.dk.elearn.protobuf";

service PostService {
  rpc GetPost (PostLookupModel) returns (PostModel);
  rpc GetAllPost (NewPostRequest) returns (stream PostModel);
}

message NewPostRequest {

}

message PostLookupModel {
  string url = 1;
}

message PostModel {
  int64 id = 1;
  string body = 2;
  string title = 3;
}